# RaftChat

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  local_test.sh  my.secrets  promtail-config.yml  run_server.sh
.github/workflows/: rust.yml
cli-chat/: Cargo.toml  build.rs
cli-chat/schemas/: Message.bop
cli-chat/src/: CrdtChat.rs  crdt_chat.rs  main.rs
cli-chat/src/CrdtChat/: network.rs  serialize.rs
cli-chat/src/crdt_chat/: network.rs
client/: home.html  index.html  package-lock.json  package.json
client/__tests__/: message.test.js  stress.js
client/static/: chatSDK.js  engine.js  message.js  storage.js  ui.css  utils.js
config/: config.env  log4rs.yaml  test.env
database/: Cargo.toml
database/src/: lib.rs
local_monitor/: docker-compose.yml  prometheus.yml  promtail-config.yml
mock_raft/: Cargo.toml
mock_raft/src/: lib.rs
mock_raft/src/transport/: mod.rs
raft/: Cargo.toml  build.rs
raft/proto/: raftchat.proto  raftchat_test_proto3_optional.proto
raft/src/: lib.rs
raft/src/database/: mod.rs
raft/src/mock_raft/: mod.rs
raft/src/persistent_state/: mod.rs
raft/src/raftchat_tonic/: mod.rs
raft/src/signal/: mod.rs
raft/src/state_machine/: mod.rs
raft/src/transport/: mod.rs
raft/src/wal/: mod.rs
server/: Cargo.toml  config.env
server/src/: main.rs  message.rs
server/src/axum_handler/: mod.rs
server/src/data_model/: mod.rs  msg.rs  time_stamp.rs
server/src/events/: handler.rs  task.rs
server/src/metrics/: mod.rs
