[package]
name = "cli-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
local-ip-address = "0.6.1"
ratatui = "0.26.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
byteorder = "1.5"
rkyv = { version = "0.7", features = ["validation"] }