[package]
name = "raft"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "SoonWon Moon <damhiya@gmail.com>",
    "Bumsung Baek <highcloud100@inha.edu>",
]
description = "chatting program on raft algorithm"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
atomic-write-file = "0.2.2"
parking_lot = { version = "0.12.3" }

[build-dependencies]
tonic-build = "0.12"
