[package]
name = "raft"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "SoonWon Moon <damhiya@gmail.com>",
    "Bumsung Baek <highcloud100@inha.edu>",
]
description = "chatting program on raft algorithm"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
atomic-write-file = "0.2.2"
parking_lot = { version = "0.12.3" }
log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12"
