[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = { path = "../raft" }
byteorder = "1.5"
rkyv = { version = "0.7", features = ["validation"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
dotenv = "0.15.0"
log = "0.4.22"
log4rs = "1.3.0"
