[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "SoonWon Moon <damhiya@gmail.com>",
    "Bumsung Baek <highcloud100@inha.edu>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = { path = "../raft" }
clap = { version = "4.5.21", features = ["derive"] }
byteorder = "1.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0"
dotenv = "0.15.0"
log = "0.4.22"
log4rs = "1.3.0"
